testsuite/tests/grammar/invalid_lexers/case_1.lkt
import common

lexer foo_example {
    foo
    match 1 {
        else send(foo, 3)
    }
}
